--- a/css/base.css
+++ b/css/base.css
@@ -17,12 +17,18 @@ ul {
 	margin-left: 2em;
 }
 
-#nav { background: transparent url("../images/bg_nav.gif") repeat-x 0 0; width: 100%; }
+#nav {
+	background: transparent url("../images/bg_nav.gif") repeat-x 0 0;
+	width: 100%;
+}
+
 #nav,
 #nav ul,
 #nav ul li,
 #nav ul li a
-{ float: left; }
+{
+	float: left;
+}
 
 #nav ul { padding-left: 25px; list-style: none; }
 
@@ -101,20 +107,27 @@ a:hover { color: #FFFFFF; }
 }
 
 .cbody p {
-	margin-left: 15px;
+	margin-left: 30px;
 	margin-top: 3px;
 	margin-bottom: 3px;
 }
 
 .cbody .item {
-	margin-top: 7px;
-	margin-bottom: 7px;
+	margin-top: 17px;
+	margin-bottom: 17px;
 }
 
 .cbody h1 {
 	color: #45C1F9;
 	font-family: Verdana, Arial, sans-serif;
 	font-weight: bold;
-	font-size: 14px;
-	margin-left: 5px;
+	font-size: 16px;
+	margin-left: 7px;
+	margin-bottom: 4px;
 }
+
+.cbody ul {
+	list-style: disc;
+	margin-left: 4em;
+}
+
