--- a/css/base.css
+++ b/css/base.css
@@ -20,35 +20,43 @@ ul {
 #nav {
 	background: transparent url("../images/bg_nav.gif") repeat-x 0 0;
 	width: 100%;
+	display: inline;
+	height: 48px;
 }
 
 #nav,
 #nav ul,
 #nav ul li,
-#nav ul li a
-{
+#nav ul li a {
+	height: 48px;
 	float: left;
 }
 
 #nav ul {
-	padding-left: 25px;
 	list-style: none;
 }
 
+#nav ul li {
+	padding: 0px 2px;
+	margin: 0 0 0 10px;
+}
+
 #nav ul li a {
-	border-top: 5px solid #4A7FD1;
+	/* border-top: 5px solid #4A7FD1; */
 	color: #5B9CFF;
-	float: left;
-	height: 44px;
-	line-height: 39px;
-	font-size: 15px;
-	margin-right: 1.5em;
+	height: 48px;
+	line-height: 48px;
+	font-size: 14px;
+	font-weight: bold;
 	text-decoration: none;
+	text-align: center;
+	margin: 0;
+	padding: 0;
 }
 
 #nav ul li a:hover {
 	color: yellow;
-	border-top-color: #75A5F0;
+	height: 48px;
 }
 
 h1 a {
@@ -56,7 +64,8 @@ h1 a {
 }
 
 a {
-	color: #C8C8C8;
+	color: #white;
+	font-weight: bold;
 }
 
 a:hover {
