--- a/css/base.css
+++ b/css/base.css
@@ -42,7 +42,6 @@ ul {
 }
 
 #nav ul li a {
-	/* border-top: 5px solid #4A7FD1; */
 	color: #5B9CFF;
 	height: 48px;
 	line-height: 48px;
@@ -64,7 +63,7 @@ h1 a {
 }
 
 a {
-	color: #white;
+	color: white;
 	font-weight: bold;
 }
 
