sans-serif renders more smooth
Signed-off-by: Cyrill Gorcunov <gorcunov@gmail.com>

--- a/css/base.css
+++ b/css/base.css
@@ -1,7 +1,7 @@
 * {
 	padding: 0px;
 	margin: 0px;
-	font-family: serif,sans,Verdana,Arial;
+	font-family: sans-serif,Verdana,Arial;
 	font-style: normal;
 	text-decoration: none;
 	outline: none;
