--- a/css/base.css
+++ b/css/base.css
@@ -11,6 +11,7 @@ body {
 	background-color: #4682b4;
 	font-size: 16px;
 }
+
 img {
     border: none;
 }
@@ -142,47 +143,11 @@ p {
 	line-height: 24px;
 }
 
-/*
-4682B4
-4682B4
-	
-496B87
-496B87
-	
-174A75
-174A75
-	
-76ACDA
-76ACDA
-	
-90B8DA
-90B8DA
-FFD658
-FFD658
-	
-BFA861
-BFA861
-	
-A6841D
-A6841D
-	
-FFE082
-FFE082
-	
-FFE8A3
-FFE8A3
-FF8A58
-FF8A58
-	
-BF7D61
-BF7D61
-	
-A6451D
-A6451D
-	
-FFA782
-FFA782
-	
-FFBEA3
-FFBEA3
-*/
+.code {
+	margin-left: 30px;
+	margin-bottom: -10px;
+	padding: 2px;
+	color: #000;
+	background-color: #f9f9f9;
+	font-family: Monospace;
+}
