--- a/css/base.css
+++ b/css/base.css
@@ -2,13 +2,15 @@
 	padding: 0px;
 	margin: 0px;
 	font-family: sans-serif,Verdana,Arial;
+	font-family: Georgia,"Times New Roman",Times,serif;
 	font-style: normal;
 	text-decoration: none;
 	outline: none;
+	background-color: #fff;
+	color: #222;
 }
 
 body {
-	background-color: #4682b4;
 	font-size: 16px;
 }
 
@@ -21,11 +23,13 @@ img {
 	max-width: 1200px;
 	min-width: 820px;
 	padding: 20px 40px 0;
+	background-color: #fff;
 }
 
 #header {
 	margin-top: 10px;
 	text-align: center;
+	background-color: #fff;
 }
 
 #header h1 {
@@ -44,15 +48,15 @@ h4 {
 }
 
 #header h4 {
-	border-top: 1px solid #4682B4;
-	border-bottom: 1px solid #174A75;
 	padding: 0;
+	margin-top: 20px;
 	display: block;
 }
 
 #header h4 ul {
-	background-color: #496B87;
 	padding-bottom: 3px;
+	border-top: 4px double #CCC;
+	border-bottom: 4px double #CCC;
 }
 
 #header h4,
@@ -68,12 +72,13 @@ h4 {
 
 #header h4 ul li {
 	padding: 0px 2px;
-	margin: 0 0 0 10px;
+	margin: 10px 10px 10px 10px;
+	line-height: 2em;
 	display: inline;
 }
 
 #header h4 ul li a {
-	color: #BFA861;
+	color: #1a3463;
 	font-size: 14px;
 	font-weight: bold;
 	text-decoration: underline;
@@ -84,7 +89,6 @@ h4 {
 }
 
 #header h4 ul li a:hover {
-	color: yellow;
 	text-decoration: none;
 }
 
@@ -95,15 +99,16 @@ h4 {
 #content {
 	width: 800px;
 	margin: 0 auto;
-	color: #fff
+	color: #222;
 }
 
 #content h1 {
 	margin-left: 7px;
 	margin-bottom: 4px;
-	font-size: 20px;
+	font-size: 28px;
 	line-height: 20px;
-	margin: 20px 0 13px;
+	margin: 30px 0 13px;
+	color: #111;
 }
 
 
@@ -112,7 +117,6 @@ h4 {
 	margin-top: 20px;
 	margin-bottom: 5px;
 	padding: 2px;
-	color: #fff;
 	font-size: 16px;
 	line-height: 24px;
 }
@@ -123,14 +127,12 @@ h4 {
 }
 
 #content a {
-	color: #00FF00;
-	color: #FFD658;
+	color: #1a3463;
 	text-decoration: underline;
 	font-weight: bold;
 }
 
 #content a:hover {
-	color: yellow;
 	text-decoration: none;
 }
 
