Update font for code blocks
Signed-off-by: Cyrill Gorcunov <gorcunov@gmail.com>

--- a/css/base.css
+++ b/css/base.css
@@ -160,5 +160,5 @@ p {
 	padding: 2px;
 	color: #000;
 	background-color: #f9f9f9;
-	font-family: Monospace;
+	font-family: 'Inconsolata', monospace;
 }
