--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,2 +1,2 @@
-@import "source-sans-pro/source.sans-pro.css";
-@import "source-code-pro/source.code-pro.css";
+@import "source-sans-pro/source-sans-pro.css";
+@import "source-code-pro/source-code-pro.css";
