--- a/css/nasm.css
+++ b/css/nasm.css
@@ -62,10 +62,11 @@ h3 {
 }
 
 table {
-    margin: 0px auto;
+    margin: 0px 30px;
     width: 90%;
     empty-cells: show;
     border-collapse: collapse;
+    border-
 }
 td, th {
     border-top: 1px solid #cccccc;
