Add self-hosted version of inconsolata fonts

--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -2,3 +2,4 @@
 @import "source-code-pro/source-code-pro.css";
 @import "roboto/roboto.css";
 @import "roboto-mono/roboto-mono.css";
+@import "inconsolata/inconsolata.css";
